# minicad_PSX

./: .gitignore  CMakeLists.txt  DESIGN.md  HARDWARE_REVIEW.md  LICENSE  README.md
assets/: README.txt  icon.tim
docs/: SOLIDWORKS_FM.md
host_tests/: test_kernel.c
include/minicad/: brep.h  camera.h  feature.h  fixed.h  history.h  ivec.h  mem.h  memcard.h  modeling.h  ops.h  save.h  sketch.h  ui_state.h
src/: main.c
src/app/: history.c  modeling.c
src/foundation/: fixed.c  ivec.c  mem.c  sintab.c
src/input/: input.c
src/io/: memcard.c
src/kernel/: brep.c  ops.c  save.c  sketch.c
src/model/: feature.c
src/render/: camera.c  render.c
tools/: build_psx.sh  gen_sintab.py  make_icon_tim.py  rip_mcad.py
